--- a/docs/index.pug
+++ b/docs/index.pug
@@ -8,12 +8,14 @@ block main
 				.col
 					.row.aic.jcc
 						.col-xs-12.tac
-							h1.fw300.fsp40 Oriented Objects CSS
-							p A light powerful helper package to make front-end faster
+							h1.fw300.fsp40(title="Oriented Objects CSS") 
+								div OO#[span.oocss CSS]
+								//- .fsp12 Oriented Object CSS
+							h2.fw300.fsp20 A light powerful framework to make front-end easiest
 						.col-auto
 							.p5
-								a.btn.flat(href="https://github.com/fdorantesm/oocss")
-									div Github #[i.fa.fa-github]
+								a.btn.flat(href="docs.html")
+									div Get started
 
 						.col-auto
 							.p5
@@ -29,48 +31,3 @@ block main
 								li show
 								li hide
 								li +
-	.fluid-container
-		.row
-			.col-md-3.col-lg-2.hidden-sm-below
-				aside
-					nav
-						ul.lsn.list-reset
-							li: a(href="#") OOCSS
-							li: a(href="#") Background
-							li: a(href="#") Border
-							li: a(href="#") Box sizing
-							li: a(href="#") Color
-							li: a(href="#") Cursor
-							li: a(href="#") Display
-							li: a(href="#") Float
-							li: a(href="#") Flex
-							li: a(href="#") Font
-							li: a(href="#") Grid
-							li: a(href="#") Height
-							li: a(href="#") List
-							li: a(href="#") Margin & Padding
-							li: a(href="#") Opacity & Visibility
-							li: a(href="#") Position
-							li: a(href="#") Text
-							li: a(href="#") Visible & Hidden
-			.col-md-9.col-lg-10
-				.p10.bcC
-					//- section.grid
-					//- 	include partials/flexbox
-					section.helpers
-						include partials/background
-						include partials/border
-						include partials/box-sizing
-						include partials/color
-						include partials/cursor
-						include partials/display
-						include partials/flex
-						include partials/float
-						include partials/font
-						include partials/height
-						include partials/list
-						include partials/margin-and-padding
-						include partials/opacity-and-visibility
-						include partials/position
-						include partials/text
-						include partials/visible-and-hidden
