--- a/docs/layout.pug
+++ b/docs/layout.pug
@@ -5,15 +5,17 @@ html
 		//- link(rel="stylesheet" href="../bootstrap.css")
 		link(rel="stylesheet" href="assets/css/style.css")
 		link(rel="stylesheet" href="assets/js/highlight/monokai-sublime.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(charset="UTF-8")
-		title Oriented Object CSS
+		meta(name="keyword" content="css framework,flexbox,bootstrap,stylesheet,stylus")
+		meta(name="description" content="OOCSS is light powerful framework to make front-end easiest made with stylus")
+		title OOCSS Framework | a light powerful framework
 	body
+		header.bcC
+			.container
+
 		main
 			block main
-		//- footer
-		//- 	.row.jcc.aic
-		//- 		.col
-		//- 			p Made with love
 		script(src="assets/js/highlight/highlight.pack.js")
 		script(src="assets/js/jquery-3.3.1.min.js")
 		script(src="assets/js/scripts.js")
