--- a/util/mixins.styl
+++ b/util/mixins.styl
@@ -1,4 +1,3 @@
-@import 'variables'
 @import 'functions'
 
 class(prefix, attr, type, from=0, to=50, gap=5, important=false)
@@ -82,9 +81,9 @@ grid(size, type = 'flex', columns = $grid-columns)
 			-webkit-box-ordinal-group 2
 			-ms-flex-order 1
 			order 1
-	
+			
 	// columns
-	if type != 'wp'
+	if type != 'fractions'
 		for x in 1..columns
 			$width = round((x/columns)*100, 8)
 			.col-{size}-{x}
@@ -116,7 +115,7 @@ grid(size, type = 'flex', columns = $grid-columns)
 			for y in 1..x
 				if y!=x
 					$width= (y/x)*100
-					.col-{size}-{y}-{x}
+					.col-{size}-{y}{'\/'}{x}
 						width unit($width,'%')
 						for k in 1..x
 							if x!=k
