Moved util to src/util  - Created dist folder  - Added gulp to the project to build styl files
 Changes to be committed:
	new file:   dist/bootstrap.css
	new file:   dist/bootstrap.css.map
	new file:   dist/bootstrap.min.css
	new file:   gulpfile.js
	new file:   package.json
	new file:   src/bootstrap.styl
	renamed:    util/functions.styl -> src/util/functions.styl
	renamed:    util/grid.styl -> src/util/grid.styl
	renamed:    util/helpers/anchor.styl -> src/util/helpers/anchor.styl
	renamed:    util/helpers/background.styl -> src/util/helpers/background.styl
	renamed:    util/helpers/border.styl -> src/util/helpers/border.styl
	renamed:    util/helpers/box-sizing.styl -> src/util/helpers/box-sizing.styl
	renamed:    util/helpers/colors.styl -> src/util/helpers/colors.styl
	renamed:    util/helpers/cursor.styl -> src/util/helpers/cursor.styl
	renamed:    util/helpers/display.styl -> src/util/helpers/display.styl
	renamed:    util/helpers/flex.styl -> src/util/helpers/flex.styl
	renamed:    util/helpers/float.styl -> src/util/helpers/float.styl
	renamed:    util/helpers/font.styl -> src/util/helpers/font.styl
	renamed:    util/helpers/form.styl -> src/util/helpers/form.styl
	renamed:    util/helpers/generals.styl -> src/util/helpers/generals.styl
	renamed:    util/helpers/height.styl -> src/util/helpers/height.styl
	renamed:    util/helpers/list.styl -> src/util/helpers/list.styl
	renamed:    util/helpers/margin-and-padding.styl -> src/util/helpers/margin-and-padding.styl
	renamed:    util/helpers/opacity-and-visibility.styl -> src/util/helpers/opacity-and-visibility.styl
	renamed:    util/helpers/position.styl -> src/util/helpers/position.styl
	renamed:    util/helpers/table.styl -> src/util/helpers/table.styl
	renamed:    util/helpers/text.styl -> src/util/helpers/text.styl
	renamed:    util/helpers/vertical-align.styl -> src/util/helpers/vertical-align.styl
	renamed:    util/helpers/visible-and-hidden.styl -> src/util/helpers/visible-and-hidden.styl
	renamed:    u

--- a/src/util/mixins.styl
+++ b/src/util/mixins.styl
@@ -11,7 +11,7 @@ class(prefix, attr, type, from=0, to=50, gap=5, important=false)
 			
 		else
 			if isDecimal(gap)
-				val = unit(percentage(value),'') % 100 == 0 ? value * 100 : value
+				val = value * 100
 			else
 				val = value
 			
