Added media queries to loop classes
 Changes to be committed:
	modified:   dist/style.css
	modified:   dist/style.css.map
	modified:   dist/style.min.css
	modified:   dist/style.min.css.map
	modified:   src/style.scss
	modified:   src/util/_grid.scss
	modified:   src/util/_mixins.scss
	new file:   src/util/_responsive-classes.scss
	modified:   src/util/_variables.scss
	modified:   src/util/helpers/_generals.scss
	renamed:    src/util/helpers/vertical-align.scss -> src/util/helpers/_vertical-align.scss
	modified:   src/util/helpers/_visible-and-hidden.scss
	new file:   test.html

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import "util/debug";
 @import "util/helpers/generals";
 @import "util/grid";
+@import "util/responsive-classes";
 @import "util/helpers/anchor";
 @import "util/helpers/background";
 @import "util/helpers/border";
