--- a/src/util/helpers/_visible-and-hidden.scss
+++ b/src/util/helpers/_visible-and-hidden.scss
@@ -4,13 +4,13 @@
 .hidden-md,
 .hidden-lg,
 .hidden-xl,
-.hidden-sm-above,
-.hidden-md-above,
-.hidden-lg-above,
-.hidden-xl-above,
-.visible-sm-below,
-.visible-md-below,
-.visible-lg-below,
+.hidden-sm-up,
+.hidden-md-up,
+.hidden-lg-up,
+.hidden-xl-up,
+.visible-sm-down,
+.visible-md-down,
+.visible-lg-down,
 {
 	@include show;
 }
@@ -21,31 +21,31 @@
 .visible-md,
 .visible-lg,
 .visible-xl,
-.visible-sm-above,
-.visible-md-above,
-.visible-lg-above,
-.hidden-sm-below,
-.hidden-md-below,
-.hidden-lg-below,
+.visible-sm-up,
+.visible-md-up,
+.visible-lg-up,
+.hidden-sm-down,
+.hidden-md-down,
+.hidden-lg-down,
 {
 	@include hide;
 }
 
 @include xs(){
-	.hidden-sm-below,
-	.hidden-md-below,
-	.hidden-lg-below,
-	.visible-sm-above,
-	.visible-md-above,
-	.visible-lg-above,
+	.hidden-sm-down,
+	.hidden-md-down,
+	.hidden-lg-down,
+	.visible-sm-up,
+	.visible-md-up,
+	.visible-lg-up,
 	{
 		@include hide;
 	}
 	
 	.visible-xs,
-	.visible-sm-below,
-	.visible-md-below,
-	.visible-lg-below,
+	.visible-sm-down,
+	.visible-md-down,
+	.visible-lg-down,
 	{
 		@include show;
 	}
@@ -57,24 +57,24 @@
 	.visible-md,
 	.visible-lg,
 	.visible-xl,
-	.visible-md-above,
-	.visible-lg-above,
-	.hidden-sm-above,
-	.hidden-md-below,
-	.hidden-lg-below,
+	.visible-md-up,
+	.visible-lg-up,
+	.hidden-sm-up,
+	.hidden-md-down,
+	.hidden-lg-down,
 	{
 		@include hide;
 	}
 
 	.visible-sm,
-	.visible-sm-above,
-	.visible-md-below,
-	.visible-lg-below,
+	.visible-sm-up,
+	.visible-md-down,
+	.visible-lg-down,
 	.hidden-xs,
 	.hidden-md,
-	.hidden-md-above,
+	.hidden-md-up,
 	.hidden-lg,
-	.hidden-lg-above,
+	.hidden-lg-up,
 	.hidden-xl,
 	{
 		@include show;
@@ -84,25 +84,25 @@
 	.hidden-md,
 	.visible-xs,
 	.visible-sm,
-	.visible-sm-below,
-	.hidden-sm-above,
-	.hidden-md-above,
-	.hidden-md-below,
-	.hidden-lg-below,
+	.visible-sm-down,
+	.hidden-sm-up,
+	.hidden-md-up,
+	.hidden-md-down,
+	.hidden-lg-down,
 	{
 		@include hide;
 	}
 	
 	.visible-md,
-	.visible-md-above,
-	.visible-md-below,
-	.visible-sm-above,
+	.visible-md-up,
+	.visible-md-down,
+	.visible-sm-up,
 	.hidden-xs,
 	.hidden-sm,
 	.hidden-lg,
 	.hidden-xl,
-	.hidden-sm-below,
-	.hidden-lg-above,
+	.hidden-sm-down,
+	.hidden-lg-up,
 	{
 		@include show;
 	}
@@ -111,12 +111,12 @@
 @include lg(){
 
 	.hidden-lg,
-	.hidden-md-above,
-	.hidden-sm-above,
-	.visible-sm-below,
-	.visible-md-below,
-	.hidden-lg-below,
-	.hidden-lg-above,
+	.hidden-md-up,
+	.hidden-sm-up,
+	.visible-sm-down,
+	.visible-md-down,
+	.hidden-lg-down,
+	.hidden-lg-up,
 	.visible-xs,
 	.visible-sm,
 	.visible-md,
@@ -126,14 +126,14 @@
 	}
 	
 	.visible-lg,
-	.visible-lg-above,
-	.visible-lg-below,
+	.visible-lg-up,
+	.visible-lg-down,
 	.hidden-xl,
 	.hidden-md,
-	.hidden-md-below,
-	.hidden-md-above,
-	.hidden-sm-below,
-	.hidden-sm-above,
+	.hidden-md-down,
+	.hidden-md-up,
+	.hidden-sm-down,
+	.hidden-sm-up,
 	.hidden-xs,
 	.hidden-sm,
 	{
@@ -144,16 +144,16 @@
 @include xl(){
 	
 	.hidden-xl,
-	.hidden-sm-above,
-	.hidden-md-above,
-	.hidden-lg-above,
+	.hidden-sm-up,
+	.hidden-md-up,
+	.hidden-lg-up,
 	.visible-xs,
 	.visible-sm,
 	.visible-md,
 	.visible-lg,
-	.visible-sm-below,
-	.visible-md-below,
-	.visible-lg-below,
+	.visible-sm-down,
+	.visible-md-down,
+	.visible-lg-down,
 	{
 		@include hide;
 	}
@@ -163,12 +163,12 @@
 	.hidden-sm,
 	.hidden-md,
 	.hidden-lg,
-	.visible-md-above,
-	.visible-sm-above,
-	.visible-lg-above,
-	.hidden-lg-below,
-	.hidden-md-below,
-	.hidden-sm-below,
+	.visible-md-up,
+	.visible-sm-up,
+	.visible-lg-up,
+	.hidden-lg-down,
+	.hidden-md-down,
+	.hidden-sm-down,
 	{
 		@include show;
 	}
