Minor changes and fixes with flexbox grid
* Added em and rem functions: thanks to @escueladigital and EDgrid devs.
* Solved some minor errors un grid gen.
* Media queries sizes converted to ems
* Font size base to 16px
* Order helpers

 Changes to be committed:
	modified:   dist/style.css
	modified:   dist/style.css.map
	modified:   dist/style.min.css
	modified:   dist/style.min.css.map
	modified:   src/util/_functions.scss
	modified:   src/util/_grid.scss
	modified:   src/util/_mixins.scss
	modified:   src/util/_variables.scss

--- a/src/util/_functions.scss
+++ b/src/util/_functions.scss
@@ -5,3 +5,21 @@
 @function breakpoint($size, $side){
 	@return map-get(map-get($breakpoints, $size), $side)
 }
+
+@function em($el, $context:$font-size-base) {
+	@if type_of($el) == number and unit($el) == 'px' {
+		@return ($el / $context) * 1em;
+  	}
+	@else {
+		@error 'Function em() requires a px unit as first argument / La función em() requiere una unidad de pixeles como primer argumento (el segundo es opcional)';
+	}
+}
+
+@function rem($el) {
+	@if type_of($el) == number and unit($el) == 'px' {
+		@return ($el / $font-size-base) * 1rem;
+	}
+	@else {
+		@error 'Function rem() requires a px unit as argument / La funcion rem() requiere una unidad de pixeles como argumento';
+	}
+}
