--- a/src/util/_variables.scss
+++ b/src/util/_variables.scss
@@ -1,14 +1,14 @@
 $debug: true;
 $responsive: true;
-$grid-system: 'inline'; // flex | float | inline | fractions
+$grid-system: 'flex'; // flex | float | inline | fractions
 $grid-columns: 12;
 
 $breakpoints: (
-	xs: (max: 480px),
-	sm: (min: 481px, max: 960px),
-	md: (min: 961px, max: 1280px),
-	lg: (min: 1281px, max: 1600px),
-	xl: (min: 1601px)
+	xs: (max: em(480px)),
+	sm: (min: em(481px), max: em(768px)),
+	md: (min: em(769px), max: em(1280px)),
+	lg: (min: em(1281px), max: em(1600px)),
+	xl: (min: em(1601px))
 );
 
 $colors: (
@@ -49,7 +49,7 @@ $font-family-serif:       Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:        $font-family-sans-serif;
 
-$font-size-base:          14px;
+$font-size-base:          16px;
 $font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
 
