--- a/src/util/_functions.scss
+++ b/src/util/_functions.scss
@@ -23,3 +23,7 @@
 		@error 'Function rem() requires a px unit as argument / La funcion rem() requiere una unidad de pixeles como argumento';
 	}
 }
+
+@function isFlex() {
+	@return $grid-system == flex
+}
